@@ -20,7 +20,10 @@ console-setup (1.29) UNRELEASED; urgency=low
     Thibault.
   * Allow to specify more than one font in the configuration file in
     FONT=...  Thanks to Samuel Thibault, closes: #508862.
-
+  * On first install read defaults for the keyboard layout from
+    /etc/X11/xorg.conf.  Julien Cristau provided the script parsing
+    xorg.conf. Closes: #515685.
+  
   [ Colin Watson ]
   * Fix property counts in Goha and legacy BDF fonts.
   * Fix keymap reduction not to try to express keymap A in terms of keymap B
